# Tp2-Metodos

./: .gitignore  Analisis.ipynb  CMakeLists.txt  Experimentos.ipynb  README.md  knn.cpp  knn.hpp  main.cpp  pca.h  pca.hpp  pca1.csv  requirements.txt  utils.hpp
Resultados definitivos/: 5_fold-SET-0-1-vecinos-resultados.csv  5_fold-SET-0-1001-vecinos-resultados.csv  5_fold-SET-0-101-vecinos-resultados.csv  5_fold-SET-0-1051-vecinos-resultados.csv  5_fold-SET-0-1101-vecinos-resultados.csv  5_fold-SET-0-1151-vecinos-resultados.csv  5_fold-SET-0-1201-vecinos-resultados.csv  5_fold-SET-0-1251-vecinos-resultados.csv  5_fold-SET-0-1301-vecinos-resultados.csv  5_fold-SET-0-1351-vecinos-resultados.csv  5_fold-SET-0-1401-vecinos-resultados.csv  5_fold-SET-0-1451-vecinos-resultados.csv  5_fold-SET-0-1501-vecinos-resultados.csv  5_fold-SET-0-151-vecinos-resultados.csv  5_fold-SET-0-1551-vecinos-resultados.csv  5_fold-SET-0-1601-vecinos-resultados.csv  5_fold-SET-0-1651-vecinos-resultados.csv  5_fold-SET-0-1701-vecinos-resultados.csv  5_fold-SET-0-1751-vecinos-resultados.csv  5_fold-SET-0-1801-vecinos-resultados.csv  5_fold-SET-0-1851-vecinos-resultados.csv  5_fold-SET-0-1901-vecinos-resultados.csv  5_fold-SET-0-1951-vecinos-resultados.csv  5_fold-SET-0-2001-vecinos-resultados.csv  5_fold-SET-0-201-vecinos-resultados.csv  5_fold-SET-0-251-vecinos-resultados.csv  5_fold-SET-0-301-vecinos-resultados.csv  5_fold-SET-0-351-vecinos-resultados.csv  5_fold-SET-0-401-vecinos-resultados.csv  5_fold-SET-0-451-vecinos-resultados.csv  5_fold-SET-0-501-vecinos-resultados.csv  (+93 more)
(+127 files in other folders)
